asteria/core/tests/errors/elaboration_errors/incorrect_kind_for_forall_type_scope.asteriacore
x : forall (f : Type -> Type). f
  = x
  ;;
